2004-06-15  Rich Kilmer <rich@infoether.com>
        * Added refactored command handling in rubygems/cmd_manager.rb and a 
          (temporary) bin/gem2 command file to test things out.  Once we feel
          comfortable, we can replace gem with gem2.

2004-06-10  Rich Kilmer <rich@infoether.com>
        * Isolated all user interaction to pass through module methods on a new
          Gem::UserInteraction module.  Those methods will be the method of abstracting
          the interaction of RubyGems for use in a GUI-based solution.

2004-06-10  Rich Kilmer <rich@infoether.com>
        * require 'rubygems' now minimally requires only the files needed
          for runtime access to gems...not management of gems.  To manage
          gems you now additionally need to execute Gem::manage_gems prior
          to using the builder/installer/etc.  This makes gemspecs not 
          backward compatible unless they add that line to the gemspec 
          after the require 'rubygems' line.

2004-06-10  Gavin Sinclair <gsinclair@soyabean.com.au>
	* bin/gem: --upgrade-all was broken, probably as a result of the
	  search changes listed below.

2004-06-09  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/remote_install.rb: delegate search functionality to
	  Cache class, bringing remote and local search and list together into
	  one piece of code.
	* bin/gem, lib/rubygems/validator.rb: move all STDIO work to bin/gem.
	  Validator.alien now returns a hash of ErrorData objects.
	* bin/gem, lib/rubygems/installer.rb: move most of the STDIO stuff to
	  bin/gem, communicating via exceptions in this case.

2004-06-08  Rich Kilmer  <rich@infoether.com>
	* Fixed the drive problem on win32 (hopefully) so multiple drives
	  should now work.  Its still a hack until rdoc is fixed.

2004-06-08  Chad Fowler  <chad@chadfowler.com>
	* Fixed bug caused by method change on Version::Requirement

2004-06-08  Rich Kilmer <rich@infoether.com>